ADD,MODIFY:<grunt,dist/>

--- a/.gitignore
+++ b/.gitignore
@@ -1,28 +1,33 @@
-.DS_Store
-dist/
-dist/zepto.min.js
-dist/zepto.js
-pkg
-*.swp
-docs/*
-.jhw-cache
-.rbenv-version
-public
-node_modules
-temp/
-npm-debug.log
-
-.project
-.settings
-*~
-*.diff
-*.patch
+# Folders to ignore
 /*.html
-.DS_Store
-.bower.json
-.sizecache.json
-/dist
 /bower_components
 /node_modules
-
 /test
+
+# Numerous always-ignore extensions
+*.patch
+*.diff
+*.err
+*.log
+*.orig
+*.rej
+*.swo
+*.swp
+*.vi
+*.zip
+*~
+
+# OS or Editor folders
+._*
+.cache
+.DS_Store
+.idea
+.project
+.settings
+.tmproj
+*.esproj
+*.sublime-project
+*.sublime-workspace
+nbproject
+Thumbs.db
+
